--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "babel-preset-react": "^6.23.0",
     "webpack": "^2.2.1"
   },
+  "engines": {
+    "node":"6.13.1"
+  },
   "dependencies": {
     "body-parser": "^1.17.0",
     "express": "^4.15.0",
