--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "webpack": "^2.2.1"
   },
   "engines": {
-    "node":"6.13.1"
+    "node": "6.13.1"
   },
   "dependencies": {
     "body-parser": "^1.17.0",
+    "cool-ascii-faces": "^1.3.4",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
