--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "heroku-postbuild": "webpack -d --watch",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
   },
